--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -54,7 +54,7 @@
             </div>
           </header>
           <section class="article-body"></section>
-          <a href="#" class="read-on">Read on &rarr;</a>
+          <a href="#" class="read-on">Read on</a>
         </article>
       </section>
       <section id="about" class="tab-content">
@@ -83,6 +83,8 @@
     <!-- Model Files -->
     <script src="scripts/blogArticles.js"></script>
     <script src="scripts/article.js"></script>
+    <script src="scripts/articleView.js"></script>
     <!-- TODO: Link up our new js file! -->
+
   </body>
 </html>
